--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav class="navbar">
             <ul>
                 <li> <a class="active" href="#"> home </a> </li>
-                <li> <a href="https://www.instagram.com/cyber_flamer/"> contacte </a> </li>
+                <li> <a href="https://www.instagram.com/cyber_flamer/"> contact </a> </li>
                 <li> <a href="https://discord.gg/K3TvnS7"> join now </a> </li>
                 </ul>
         </nav>
