--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     <div class="wrapper">
         <nav class="navbar">
             <ul>
-                <li> <a class="active" href="#"> home </a> </li>
-                <li> <a href="https://www.instagram.com/cyber_flamer/"> contact </a> </li>
-                <li> <a href="https://discord.gg/K3TvnS7"> join now </a> </li>
+                <li> <a class="active" href="#"> HOME </a> </li>
+                <li> <a href="https://www.instagram.com/cyber_flamer/"> CONTACT </a> </li>
+                <li> <a href="https://discord.gg/K3TvnS7"> JOIN NOW </a> </li>
                 </ul>
         </nav>
         <div class="center">
