--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <nav class="navbar">
             <ul>
                 <li> <a class="active" href="#"> HOME </a> </li>
-                <li> <a href="https://www.instagram.com/cyber_flamer/"> CONTACT </a> </li>
+                <li> <a href="https://www.instagram.com/starz_support/"> CONTACT </a> </li>
                 <li> <a href="https://discord.gg/K3TvnS7"> JOIN NOW </a> </li>
                 </ul>
         </nav>
