--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h1>welcome to starz  </h1>
             <h2> win free rewards </h2>
             <div class="buttons">
-                <button> a server with legit rewards </button>
-                <button class="btn"> site coded by knight </button>
+                <button> A SERVER WITH LEGIT REWARDS </button>
+                <button class="btn"> SITE CODED BY KNIGHT </button>
 				
     </div>
     </div>
