--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <h1>welcome to starz  </h1>
             <h2> win free rewards </h2>
             <div class="buttons">
-                <button> A SERVER WITH LEGIT REWARDS </button>
+                <button> EARN FREE REWARDS </button>
                 <button class="btn"> SITE CODED BY KNIGHT </button>
 				
     </div>
