--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
 <meta charset="UTF-8">
-<title>welcome to STARZ EMPIRE offical </title>
+<title>WELCOME TO STARZ EMPIRE OFFICAL </title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
                 </ul>
         </nav>
         <div class="center">
-            <h1>welcome to starz  </h1>
+            <h1>WELCOME TO STARZ  </h1>
             <h2> win free rewards </h2>
             <div class="buttons">
                 <button> EARN FREE REWARDS </button>
